@@ -1,3 +1,12 @@
+2008-02-01 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* src/SDCCast.c (resolveSymbols): added reentrancy check for parameters
+	  of function pointer
+	* src/SDCCerr.h,
+	* src/SDCCerr.c: changed warning W_NONRENT_ARGS to error E_NONRENT_ARGS
+	* support/regression/tests/absolute.c: added TestStruct TestVar (see also
+	  bug 1859853)
+
 2008-02-01 Raphael Neider <rneider AT web.de>
 
 	* device/include/pic/pic16f886.h,
